--- a/markup/_layouts/_content/live_score_content.jade
+++ b/markup/_layouts/_content/live_score_content.jade
@@ -107,3 +107,184 @@ section.nl-section.nl-players.nl-live-score
 						table.table.table-striped.table-info4
 							tbody
 								+contest-info(11)
+
+			div.col-sm-12.col-lg-6.col-xl-4
+				h6.d-inline-block Stats
+				div.team-field-section
+					div.rank
+						div.rank__no.aligner
+							div.rank__center
+								span Rank
+								span 124
+						div.rank_select
+							div.rank__content
+								div.dropdown
+									button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Contest touchdowns all day!
+									div.dropdown-menu(aria-labelledby="dropdownMenuButton")
+										a.dropdown-item Team A
+										a.dropdown-item Team B
+										a.dropdown-item Team C
+								div.rank__playlist
+									div.rank__playlist-item
+										span.playing Playing
+										span 4
+									div.rank__playlist-item
+										span.played Played
+										span 2
+									div.rank__playlist-item
+										span.not-played Not played
+										span 4
+						div.rank__stats
+							div.rank__content.leaders-list
+								p.tit original
+								p 90.3 FP
+								p.tit Live projections
+								p 114.8 FP
+								p.tit PMR
+								p 360 min
+
+				div.nl-team-button
+					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
+					button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
+
+				div.nl-team-field.football
+					div.striker-line
+					div.midfielder-line
+					div.defender-line
+					div.player-main-block.football
+						div.nl-player-block.nl-FLEX-position(data-position="FLEX")
+							img(src="assets/img/football/img-FLEX.png" alt="FLEX")
+							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								p gronkowski
+								p.data <span>12.67</span> <span>$42000</span>
+						div.nl-player-block.nl-K-position(data-position="K")
+							img(src="assets/img/football/img-K.png" alt="K")
+							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								p gronkowski
+								p.data <span>12.67</span> <span>$42000</span>
+						div.nl-player-block.nl-LRB-position(data-position="LRB")
+							img(src="assets/img/football/img-LRB.png" alt="LRB")
+							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								p gronkowski
+								p.data <span>12.67</span> <span>$42000</span>
+						div.nl-player-block.nl-RRB-position(data-position="RRB")
+							img(src="assets/img/football/img-RRB.png" alt="RRB")
+							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								p gronkowski
+								p.data <span>12.67</span> <span>$42000</span>
+						div.nl-player-block.nl-QB-position(data-position="QB")
+							img(src="assets/img/football/img-QB.png" alt="QB")
+							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								p gronkowski
+								p.data <span>12.67</span> <span>$42000</span>
+						div.nl-player-block.nl-LWR-position(data-position="LWR")
+							img(src="assets/img/football/img-LWR.png" alt="LWR")
+							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								p gronkowski
+								p.data <span>12.67</span> <span>$42000</span>
+						div.nl-player-block.nl-RWR-position(data-position="RWR")
+							img(src="assets/img/football/img-RWR.png" alt="RWR")
+							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								p gronkowski
+								p.data <span>12.67</span> <span>$42000</span>
+						div.nl-player-block.nl-TE-position(data-position="TE")
+							img(src="assets/img/football/img-TE.png" alt="TE")
+							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
+								p gronkowski
+								p.data <span>12.67</span> <span>$42000</span>
+						div.nl-player-block.nl-team-logo-position
+							img(src="assets/img/football/team-logo.png" alt="logo")
+
+				div.nl-team-list.nl-my-teams.hide
+					.nl-card-wrapper
+						.row
+							.col-12
+								div.nl-team-card.table-data-field
+									h3 team NLC2
+									<img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+
+						.row
+							.col-12
+								table.table.table-striped.nl-team-list-table
+									thead
+										tr
+
+											th NAME
+											th POS
+											th FP
+											th SALARY
+											th
+
+									tbody
+										tr
+
+											td Player name
+											td.pos FLEX
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
+										tr
+
+											td Player name
+											td.pos K
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
+										tr
+
+											td Player name
+											td.pos LRB
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
+										tr
+
+											td Player name
+											td.pos RRB
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
+										tr
+
+											td Player name
+											td.pos QB
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
+										tr
+
+											td Player name
+											td.pos LWR
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
+										tr
+
+											td Player name
+											td.pos RWR
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
+										tr
+
+											td Player name
+											td.pos TE
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
