--- a/markup/_scss/sections/_nl-enter-contests.scss
+++ b/markup/_scss/sections/_nl-enter-contests.scss
@@ -58,7 +58,7 @@
   .nl-RWM-position{
     top: 25%;
     right: 17%;
-  }  
+  }
 
   @media (min-width: 1200px)  {
     .nl-CM-position{
@@ -124,7 +124,7 @@
     }
   }
 }
-  
+
   .nl-team-field {
       background: url(../img/nl-soccer-field.png) no-repeat 0 0;
       background-size: contain;
@@ -279,7 +279,7 @@
 
       .soccer .player-main-block {
         min-height: 382px;
-        
+
         img {
           max-width: 47px;
         }
@@ -298,7 +298,7 @@
         min-height: 422px;
       }
     }
-  
+
 
   #dropdownMenuButton {
     width: 100%;
@@ -365,7 +365,7 @@
 }
 
 .nl-enter-contests {
-  
+
   .nl-table-scroll2 {
     max-height: 16.25rem;
     td {
@@ -401,13 +401,19 @@
       margin: 0;
     }
   }
+}
 
-  .leaders-list {
-  	p {
-  		padding: 0 0.25rem;
-  	}
-  	// p:nth-child(even) {
-   //    padding-bottom: 0.5rem;
-  	// }
+.leaders-list {
+  .tit {
+    text-transform: uppercase;
+    color: #e48706;
   }
+	p {
+		padding: 0 0.25rem;
+    margin-bottom: 0;
+    font-size: 14px;
+	}
+	p:nth-child(even) {
+    padding-bottom: 0.5rem;
+	}
 }
